[project]
name = "booking-bot"
version = "0.1.0"
description = "WhatsApp AI Booking Bot"
authors = [
    {name = "Stas Nazarov",email = "stasn16@gmail.com"}
]
requires-python = "^3.12"
dependencies = [
    "fastapi (>=0.135.1,<0.136.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "openai (>=2.26.0,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "celery (>=5.6.2,<6.0.0)",
    "redis (>=7.3.0,<8.0.0)",
    "python-jose (>=3.5.0,<4.0.0)",
    "google-api-python-client (>=2.192.0,<3.0.0)",
    "google-auth-oauthlib (>=1.3.0,<2.0.0)",
    "cryptography (>=46.0.5,<47.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "slowapi (>=0.1.9,<0.2.0)",
    "sentry-sdk (>=2.54.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
